# roboVision

./: .gitignore  .gitlab-ci.yml  README.md
robo_vision_interface/: CMakeLists.txt  package.xml
robo_vision_interface/msg/: RoboVisionDetection.msg  RoboVisionObject.msg
robo_vision_ros2/: CMakeLists.txt  LICENSE  README.md  package.xml
robo_vision_ros2/scripts/: RoboVisionNode.py  ids_camera_interface_node.py
src/: roboVision.py
